--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,10 +1,19 @@
+<!-- public/admin/index.html -->
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8" />
-    <title>Decap CMS</title>
+    <meta charset="UTF-8" />
+    <title>Content Manager</title>
+    <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
   </head>
   <body>
-    <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
+    <script>
+      window.CMS_MANUAL_INIT = true;
+    </script>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <script>
+      netlifyIdentity.init();
+      CMS.init();
+    </script>
   </body>
 </html>
