--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -1,18 +1,27 @@
-<!-- public/admin/index.html -->
 <!DOCTYPE html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <title>Content Manager</title>
     <script src="https://unpkg.com/decap-cms@latest/dist/decap-cms.js"></script>
+    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
   </head>
   <body>
     <script>
       window.CMS_MANUAL_INIT = true;
-    </script>
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-    <script>
-      netlifyIdentity.init();
+
+      const identity = window.netlifyIdentity;
+
+      identity.on("init", (user) => {
+        if (!user) {
+          identity.on("login", () => {
+            document.location.href = "/admin/";
+          });
+        }
+      });
+
+      identity.init();
+
       CMS.init();
     </script>
   </body>
