fix(config): rename config file from config.yaml to config.yml and restore configuration settings

--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -21,10 +21,8 @@
         window.netlifyIdentity.init();
       }
 
-      // Explicitly load renamed config.yaml
-      CMS.init({
-        config: "/admin/config.yaml",
-      });
+      // Use default config path (public/admin/config.yml)
+      CMS.init();
     </script>
   </body>
 </html>
