--- a/public/admin/index.html
+++ b/public/admin/index.html
@@ -3,30 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <title>Content Manager</title>
-    <!-- Scripts load first -->
-    <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+    <!-- CMS Script -->
     <script src="https://unpkg.com/decap-cms@^3.0.0/dist/decap-cms.js"></script>
   </head>
   <body>
-    <!-- Script waits until CMS is ready -->
     <script>
       window.CMS_MANUAL_INIT = true;
 
       window.addEventListener("load", function () {
-        if (window.netlifyIdentity) {
-          window.netlifyIdentity.on("init", (user) => {
-            if (!user) {
-              window.netlifyIdentity.on("login", () => {
-                document.location.href = "/admin/";
-              });
-            }
-          });
-          window.netlifyIdentity.init();
-
-          // Initialize CMS only after everything is loaded
-          if (typeof CMS !== "undefined") {
-            CMS.init(); // ✅ Will now be defined
-          }
+        // Initialize CMS - it will automatically load config.yml
+        if (typeof CMS !== "undefined") {
+          CMS.init();
         }
       });
     </script>
